--- a/.github/workflows/mpesa.yml
+++ b/.github/workflows/mpesa.yml
@@ -1,7 +1,10 @@
 name: Mpesa_Gem
 
-on: [push, pull_request]
-
+on: 
+  push: 
+    branches: ["master"]
+  pull_request:
+    branches: ["master"]
 jobs:
   build:
 
