--- a/.github/workflows/mpesa.yml
+++ b/.github/workflows/mpesa.yml
@@ -8,11 +8,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
     - name: Set up Ruby 2.7
-      uses: actions/setup-ruby@v1
+    - uses: actions/setup-ruby@v1
+    - uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.7.x
+        ruby-version: 3.0
     - name: Build and test with Rake
       run: |
         gem install bundler
