--- a/.github/workflows/mpesa.yml
+++ b/.github/workflows/mpesa.yml
@@ -9,8 +9,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Ruby 2.7
-    - uses: actions/setup-ruby@v1
+    - name: Set up Ruby
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: 3.0
